# DeploymentReadinessPlatform

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_CODE_BUILD.md  DEVELOPMENT.md  DRP_SPEC.md  PLAN.md  README.md  docker-compose.yml  drp_mockups.html  netlify.toml  tasks.yaml  zarf.yaml
.ai/: guidelines.md  mcp-servers.md  project.yaml
backend/: Dockerfile  README.md  app.py  auth.py  config.py  db.py  deployment_helpers.py  email_service.py  pyproject.toml  rag.py  rag_client.py  rules.py  scheduler.py  storage.py
backend/blueprints/: __init__.py  assessments.py  chat.py  documents.py  notifications.py  readiness.py  service_members.py  units.py  uploads.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_chat.py  test_db_integration.py  test_documents.py  test_http.py  test_notifications.py  test_readiness_routes.py  test_rules.py  test_units_routes.py  test_uploads.py
bundle/: uds-bundle.yaml
chart/: Chart.yaml  values.yaml
db/: test_queries.sql
docs/: backend-assessments-checklist.md  backend-assessments.md  configuration.md  justifications.md  testing-backend-assessments.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
gateway/: Dockerfile  package-lock.json  package.json  server.ts  tsconfig.json
manifests/: uds-package.yaml
rag-service/: .dockerignore  .env.example  server.py
team/: TEAM_PLAN.md  backend-assessments.md  backend-foundation-rag.md  backend-readiness-chat.md  deployment-health-flow.md  frontend-bryan.md  frontend-derrick.md
(+95 files in other folders)
