[project]
name = "drp-backend"
version = "0.1.0"
description = "DRP Flask API — REST API for the three user surfaces plus the in-process policy-assistant RAG pipeline"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "openai==2.32.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-flask>=1.3",
]

[tool.pytest.ini_options]
markers = [
    "db: integration tests that require a live SUPABASE_CONNECTION_STRING",
]
